# automake input for pixmaps

pixmapsdir = $(DMDIR)/pixmaps

pixmaps_DATA = \
		README \
		gnuLogo.xpm \
		Eagle.xpm \
		Earth200x130.xpm \
		Earth.jpg \
		Stars.jpg \
		StarsLogo.jpg \
		GnuLinux-logo.jpg

EXTRA_DIST = \
	$(pixmaps_DATA) \
	README.newGnuLinuxlogo \
	NASA_image_guideline.html \
	README

